--- a/src/main/resources/vm_base/ABaseParam.java.vm
+++ b/src/main/resources/vm_base/ABaseParam.java.vm
@@ -1,4 +1,6 @@
-public class BaseParam {
+package ${packageName}.entity.query;
+
+public class ABaseParam {
 	private SimplePage simplePage;
 	private Integer pageNum;
 	private Integer pageSize;
