--- a/src/main/resources/vm_base/Result.java.vm
+++ b/src/main/resources/vm_base/Result.java.vm
@@ -1,3 +1,4 @@
+package ${packageName}.entity.vo;
 
 import java.util.HashMap;
 import java.util.Objects;
@@ -5,7 +6,7 @@ import java.util.Objects;
 /**
  * 操作消息提醒
  */
-public class AjaxResult extends HashMap<String, Object> {
+public class Result extends HashMap<String, Object> {
     private static final long serialVersionUID = 1L;
 
     /**
@@ -24,30 +25,30 @@ public class AjaxResult extends HashMap<String, Object> {
     public static final String DATA_TAG = "data";
 
     /**
-     * 初始化一个新创建的 AjaxResult 对象，使其表示一个空消息。
+     * 初始化一个新创建的 Result 对象，使其表示一个空消息。
      */
-    public AjaxResult() {
+    public Result() {
     }
 
     /**
-     * 初始化一个新创建的 AjaxResult 对象
+     * 初始化一个新创建的 Result 对象
      *
      * @param code 状态码
      * @param msg  返回内容
      */
-    public AjaxResult(int code, String msg) {
+    public Result(int code, String msg) {
         super.put(CODE_TAG, code);
         super.put(MSG_TAG, msg);
     }
 
     /**
-     * 初始化一个新创建的 AjaxResult 对象
+     * 初始化一个新创建的 Result 对象
      *
      * @param code 状态码
      * @param msg  返回内容
      * @param data 数据对象
      */
-    public AjaxResult(int code, String msg, Object data) {
+    public Result(int code, String msg, Object data) {
         super.put(CODE_TAG, code);
         super.put(MSG_TAG, msg);
         if (data != null) {
@@ -60,8 +61,8 @@ public class AjaxResult extends HashMap<String, Object> {
      *
      * @return 成功消息
      */
-    public static AjaxResult success() {
-        return AjaxResult.success("操作成功");
+    public static Result success() {
+        return Result.success("操作成功");
     }
 
     /**
@@ -69,8 +70,8 @@ public class AjaxResult extends HashMap<String, Object> {
      *
      * @return 成功消息
      */
-    public static AjaxResult success(Object data) {
-        return AjaxResult.success("操作成功", data);
+    public static Result success(Object data) {
+        return Result.success("操作成功", data);
     }
 
     /**
@@ -79,8 +80,8 @@ public class AjaxResult extends HashMap<String, Object> {
      * @param msg 返回内容
      * @return 成功消息
      */
-    public static AjaxResult success(String msg) {
-        return AjaxResult.success(msg, null);
+    public static Result success(String msg) {
+        return Result.success(msg, null);
     }
 
     /**
@@ -90,8 +91,8 @@ public class AjaxResult extends HashMap<String, Object> {
      * @param data 数据对象
      * @return 成功消息
      */
-    public static AjaxResult success(String msg, Object data) {
-        return new AjaxResult(HttpStatus.SUCCESS, msg, data);
+    public static Result success(String msg, Object data) {
+        return new Result(HttpStatus.SUCCESS, msg, data);
     }
 
     /**
@@ -100,8 +101,8 @@ public class AjaxResult extends HashMap<String, Object> {
      * @param msg 返回内容
      * @return 警告消息
      */
-    public static AjaxResult warn(String msg) {
-        return AjaxResult.warn(msg, null);
+    public static Result warn(String msg) {
+        return Result.warn(msg, null);
     }
 
     /**
@@ -111,8 +112,8 @@ public class AjaxResult extends HashMap<String, Object> {
      * @param data 数据对象
      * @return 警告消息
      */
-    public static AjaxResult warn(String msg, Object data) {
-        return new AjaxResult(HttpStatus.WARN, msg, data);
+    public static Result warn(String msg, Object data) {
+        return new Result(HttpStatus.WARN, msg, data);
     }
 
     /**
@@ -120,8 +121,8 @@ public class AjaxResult extends HashMap<String, Object> {
      *
      * @return 错误消息
      */
-    public static AjaxResult error() {
-        return AjaxResult.error("操作失败");
+    public static Result error() {
+        return Result.error("操作失败");
     }
 
     /**
@@ -130,8 +131,8 @@ public class AjaxResult extends HashMap<String, Object> {
      * @param msg 返回内容
      * @return 错误消息
      */
-    public static AjaxResult error(String msg) {
-        return AjaxResult.error(msg, null);
+    public static Result error(String msg) {
+        return Result.error(msg, null);
     }
 
     /**
@@ -141,8 +142,8 @@ public class AjaxResult extends HashMap<String, Object> {
      * @param data 数据对象
      * @return 错误消息
      */
-    public static AjaxResult error(String msg, Object data) {
-        return new AjaxResult(HttpStatus.ERROR, msg, data);
+    public static Result error(String msg, Object data) {
+        return new Result(HttpStatus.ERROR, msg, data);
     }
 
     /**
@@ -152,8 +153,8 @@ public class AjaxResult extends HashMap<String, Object> {
      * @param msg  返回内容
      * @return 错误消息
      */
-    public static AjaxResult error(int code, String msg) {
-        return new AjaxResult(code, msg, null);
+    public static Result error(int code, String msg) {
+        return new Result(code, msg, null);
     }
 
     /**
@@ -191,7 +192,7 @@ public class AjaxResult extends HashMap<String, Object> {
      * @return 数据对象
      */
     @Override
-    public AjaxResult put(String key, Object value) {
+    public Result put(String key, Object value) {
         super.put(key, value);
         return this;
     }
