--- a/src/main/resources/vm_base/PaginationResultVo.java.vm
+++ b/src/main/resources/vm_base/PaginationResultVo.java.vm
@@ -1,3 +1,7 @@
+package ${packageName}.entity.vo;
+
+import java.util.ArrayList;
+import java.util.List;
 
 public class PaginationResultVo<T> {
 	private Integer totalCount;
