--- a/src/main/resources/vm_base/SimplePage.java.vm
+++ b/src/main/resources/vm_base/SimplePage.java.vm
@@ -1,3 +1,7 @@
+package ${packageName}.entity.query;
+
+import ${packageName}.utils.enums.PageSizeEnum;
+
 public class SimplePage {
 	private int pageNum;
 	private int countTotal;
