--- a/src/main/resources/vm/controller.java.vm
+++ b/src/main/resources/vm/controller.java.vm
@@ -35,9 +35,9 @@ public class ${className}Controller extends ABaseController  {
     /**
      * 批量新增
      */
-    @PostMapping("/insertBatch")
-    public Result insertBatch(@RequestBody List<${className}> listBean){
-        Integer result = #classNameService().insertBatch(listBean);
+    @PostMapping("/inserts")
+    public Result inserts(@RequestBody List<${className}> listBean){
+        Integer result = #classNameService().inserts(listBean);
         return determineOperationOutcome(result);
     }
 
@@ -63,7 +63,7 @@ public class ${className}Controller extends ABaseController  {
     /**
      * 根据 #funName($keyData)s 逻辑删除
      */
-    @DeleteMapping("/deleteBy#funName($keyData)s")
+    @DeleteMapping("/deleteBy#funName($keyData)Soft")
     public Result softDeleteBy#funName($keyData)(#parameterNameController2($keyData)){
         Integer result = #classNameService().softDeleteBy#funName($keyData)(#parameterNameController3($keyData));
         return determineOperationOutcome(result);
@@ -81,11 +81,28 @@ public class ${className}Controller extends ABaseController  {
 
 #if($keyData.getValue().get(0).getAutoIncrementFlag())
     /**
+     * 根据 #funName($keyData) 批量查询
+     */
+    @GetMapping("/selectBy#funName($keyData)s")
+    public Result selectBy#funName($keyData)s(@RequestParam List<Integer> ids){
+        return success(#classNameService().selectBy#funName($keyData)s(ids));
+    }
+
+    /**
+     * 根据 #funName($keyData) 批量修改
+     */
+    @PutMapping("/updateBy#funName($keyData)s")
+    public Result updateBy#funName($keyData)s(@RequestBody ${className} bean,@RequestParam List<Integer> ids){
+        Integer result = #classNameService().updateBy#funName($keyData)s(bean,ids);
+        return determineOperationOutcome(result);
+    }
+
+    /**
      * 根据 #funName($keyData) 批量删除
      */
-    @DeleteMapping("/deleteBy#funName($keyData)Batch")
-    public Result deleteBy#funName($keyData)Batch(@RequestParam List<Integer> list){
-        Integer result = #classNameService().deleteBy#funName($keyData)Batch(list);
+    @DeleteMapping("/deleteBy#funName($keyData)s")
+    public Result deleteBy#funName($keyData)s(@RequestParam List<Integer> ids){
+        Integer result = #classNameService().deleteBy#funName($keyData)s(ids);
         return determineOperationOutcome(result);
     }
 #end
