--- a/src/main/resources/vm/mapper.java.vm
+++ b/src/main/resources/vm/mapper.java.vm
@@ -25,11 +25,20 @@ public interface ${className}Mapper extends ABaseMapper<${className},${className
     Integer deleteBy#funName($keyData)(#parameterName($keyData));
 
 #if($keyData.getValue().get(0).getAutoIncrementFlag())
+    /**
+     * 根据 #funName($keyData) 批量查询
+     */
+    List<${className}> selectBy#funName($keyData)s(@Param("ids") List<Integer> ids);
+
+    /**
+     * 根据 #funName($keyData) 批量修改
+     */
+    Integer updateBy#funName($keyData)s(@Param("bean")${className} bean,@Param("ids") List<Integer> ids);
 
     /**
     * 根据 #funName($keyData) 批量删除
     */
-    Integer deleteBy#funName($keyData)Batch(@Param("list") List<Integer> list);
+    Integer deleteBy#funName($keyData)s(@Param("ids") List<Integer> ids);
 #end
 #end
 
