--- a/src/main/resources/vm/mapperXML.xml.vm
+++ b/src/main/resources/vm/mapperXML.xml.vm
@@ -87,7 +87,7 @@
     </insert>
 
     <!--批量插入-->
-    <insert id="insertBatch">
+    <insert id="inserts">
         INSERT INTO $tableName (#foreach($item in $fieldInfoList)#if(!$item.autoIncrementFlag)$item.fieldName#if($foreach.index < $fieldInfoList.size() - 1),#end#end#end)
         VALUES
         <foreach collection="list" item="item" separator=",">
@@ -129,11 +129,39 @@
     </delete>
 
 #if($keyData.getValue().get(0).autoIncrementFlag)
+    <!--根据#funName($keyData)批量查询-->
+    <select id="selectBy#funName($keyData)s" resultMap="base_result_map">
+        SELECT <include refid="base_column_list"/> FROM $tableName WHERE #sqlDeleteFunName($keyData)
+        IN
+        <foreach collection="ids" item="id" separator="," open="(" close=")">
+            #{id}
+        </foreach>
+    </select>
+
+    <!--根据#funName($keyData)批量修改-->
+    <update id="updateBy#funName($keyData)s">
+        UPDATE $tableName
+        <set>
+#foreach($item in $fieldInfoList)
+    #if(!$item.autoIncrementFlag)
+        <if test="bean.$item.propertyName != null#if($item.javaType == "String") and bean.$item.propertyName != ''#end">
+            $item.fieldName = #{bean.$item.propertyName},
+        </if>
+    #end
+#end
+        </set>
+        WHERE #sqlDeleteFunName($keyData)
+        IN
+        <foreach collection="ids" item="id" separator="," open="(" close=")">
+            #{id}
+        </foreach>
+    </update>
+
     <!--根据#funName($keyData)批量删除-->
-    <delete id="deleteBy#funName($keyData)Batch">
+    <delete id="deleteBy#funName($keyData)s">
         DELETE FROM $tableName WHERE #sqlDeleteFunName($keyData)
         IN
-        <foreach collection="list" item="id" separator="," open="(" close=")">
+        <foreach collection="ids" item="id" separator="," open="(" close=")">
             #{id}
         </foreach>
     </delete>
