--- a/src/main/resources/vm/serviceImpl.java.vm
+++ b/src/main/resources/vm/serviceImpl.java.vm
@@ -58,8 +58,8 @@ public class ${className}ServiceImpl implements ${className}Service  {
      * 批量新增
      */
     @Override
-    public Integer insertBatch(List<${className}> listBean){
-        return #classNameMapper().insertBatch(listBean);
+    public Integer inserts(List<${className}> listBean){
+        return #classNameMapper().inserts(listBean);
     }
 
 #foreach($keyData in ${keyIndexMap.entrySet()})
@@ -120,13 +120,30 @@ public class ${className}ServiceImpl implements ${className}Service  {
     public Integer deleteBy#funName($keyData)(#parameterName2($keyData)){
         return #classNameMapper().deleteBy#funName($keyData)(#parameterName3($keyData));
     }
+
 #if($keyData.getValue().get(0).getAutoIncrementFlag())
+    /**
+     * 根据 #funName($keyData) 批量查询
+     */
+    @Override
+    public List<${className}> selectBy#funName($keyData)s(List<Integer> ids){
+        return #classNameMapper().selectBy#funName($keyData)s(ids);
+    }
+
+    /**
+     * 根据 #funName($keyData) 批量修改
+     */
+    @Override
+    public Integer updateBy#funName($keyData)s(${className} bean,List<Integer> ids){
+        return #classNameMapper().updateBy#funName($keyData)s(bean,ids);
+    }
+
     /**
      * 根据 #funName($keyData) 批量删除
      */
     @Override
-    public Integer deleteBy#funName($keyData)Batch(List<Integer> list){
-        return #classNameMapper().deleteBy#funName($keyData)Batch(list);
+    public Integer deleteBy#funName($keyData)s(List<Integer> ids){
+        return #classNameMapper().deleteBy#funName($keyData)s(ids);
     }
 #end
 #end
